--- a/index.html
+++ b/index.html
@@ -8,39 +8,97 @@
         <meta name="description" content="Dakota Kallas's portfolio site">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="navbar">
                 <div class="navbar-container">
-                    <a class="nav-heading-text" href="index.html">
-                        <strong class="nav-heading">Dakota Kallas</strong>
-                    </a>
-                    <ul class="menu">
-                        <li>
-                            <a id="menu-about" class="is-active menu-link menu-about" href="index.html">About</a>
-                        </li>
-                        <li>
-                            <a id="menu-projects" class="menu-link menu-projects" href="projects.html">Projects</a>
-                        </li>
-                    </ul>
+                    <div class="nav-heading">
+                        <a class="nav-link" href="index.html">
+                            <strong>Dakota Kallas</strong>
+                        </a>
+                    </div>
+                    <div class="nav-links">
+                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </div>
                 </div>
             </nav>
         </header>
-        <section>
+        <section class="home intro has-centered-text">
             <div>
                 <h1>Enthusiastic Software Developer.</h1>
                 <h2>I design & develop software, and I love what I do.</h2>
             </div>
-        </section>
-        <section>
             <div>
-                <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                <h2>Since I began my journey as a developer I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
+                <img class="headshot" src="images/profile.png" alt="Profile Photo"/>
+            </div>
+            <div class="computer-container">
+                <img class="computers" src="images/computers.png" alt="Computers"/>
+            </div>
+        </section>
+        <section class="home about has-centered-text is-secondary is-long">
+            <div class="centered-container">
+                <div class="section is-three-fifths">
+                    <h1>Hi, I'm Dakota. Nice to meet you.</h1>
+                    <h2>Since I began my journey as a developer I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
+                </div>
+            </div>
+        </section>
+        <section class="skillset centered-container">
+            <div class="skillset-container is-three-fifths has-centered-text">
+                <div class="column column-left backend-development">
+                    <img class="skill-icon" src="images/backend.png" alt="Backend"/>
+                    <h1>Backend Developer</h1>
+                    <p>I value creating efficient & useful data structures using innovative technologies.</p>
+                    <h2>Languages:</h2>
+                    <p>Java, C#, Python, C, SQL</p>
+                    <h2>Tools:</h2>
+                    <ul>
+                        <li>Visual Studio</li>
+                        <li>GitHub</li>
+                        <li>VS Code</li>
+                        <li>Terminal</li>
+                        <li>IntelliJ</li>
+                        <li>MySQL</li>
+                    </ul>
+                </div>
+                <div class="column column-right frontend-development">
+                    <img class="skill-icon" src="images/frontend.png" alt="Frontend"/>
+                    <h1>Frontend Developer</h1>
+                    <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
+                    <h2>Languages:</h2>
+                    <p>HTML, CSS, JavaScript</p>
+                    <h2>Tools:</h2>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>Node.js</li>
+                        <li>Angular</li>
+                        <li>ExpressJS</li>
+                        <li>MongoDB</li>
+                        <li>Blazor</li>
+                    </ul>
+                </div>
             </div>
         </section>
         <footer>
-
+            <div class="footer-container">
+                <div class="footer-copyright-container">
+                    <p>Copyright © Dakota Kallas 2022</p>
+                </div>
+                <div class="footer-icon-container">
+                    <a href="mailto:kallas.dakota@gmail.com">
+                        <div id="email-icon" class="footer-icon"></div>
+                    </a>
+                    <a href="https://www.linkedin.com/in/dakota-kallas/">
+                        <div id="linkedin-icon" class="footer-icon"></div>
+                    </a>    
+                    <a href="https://github.com/dakota-kallas">
+                        <div id="github-icon" class="footer-icon"></div>
+                    </a>                
+                </div>
+            </div>
         </footer>
         <script src="" async defer></script>
     </body>
