--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Dakota Kallas</title>
         <meta name="description" content="Dakota Kallas's portfolio site">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="images/icon.ico">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
