--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="centered-container">
                 <div class="section is-three-fifths">
                     <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                    <h2>Since I began my journey as a developer I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
+                    <h2>Since I began my journey as a developer, I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
                 </div>
             </div>
         </section>
