Added project card implementation

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,6 @@
         <section class="project-container">
             <div id="projects" class="project-card-container"></div>
         </section>
-        <script src="" async defer></script>
+        <script src="js/project.js" async defer></script>
     </body>
 </html>
