Added more project functionality

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,24 @@
         <section class="project-container">
             <div id="projects" class="project-card-container"></div>
         </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-copyright-container">
+                    <p>Copyright © Dakota Kallas 2022</p>
+                </div>
+                <div class="footer-icon-container">
+                    <a href="mailto:kallas.dakota@gmail.com">
+                        <div id="email-icon" class="footer-icon"></div>
+                    </a>
+                    <a href="https://www.linkedin.com/in/dakota-kallas/">
+                        <div id="linkedin-icon" class="footer-icon"></div>
+                    </a>    
+                    <a href="https://github.com/dakota-kallas">
+                        <div id="github-icon" class="footer-icon"></div>
+                    </a>                
+                </div>
+            </div>
+        </footer>
         <script src="js/project.js" async defer></script>
     </body>
 </html>
