Add hover animation to nav links

--- a/index.html
+++ b/index.html
@@ -12,77 +12,79 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
     <body>
-        <header>
-            <nav class="navbar">
-                <div class="navbar-container">
-                    <div class="nav-heading">
-                        <a class="nav-link" href="index.html">
-                            <strong>Dakota Kallas</strong>
-                        </a>
+        <div class="content-wrap">
+            <header>
+                <nav class="navbar">
+                    <div class="navbar-container">
+                        <div class="nav-heading">
+                            <a href="index.html">
+                                <strong>Dakota Kallas</strong>
+                            </a>
+                        </div>
+                        <div class="nav-links">
+                            <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
+                            <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
+                        </div>
                     </div>
-                    <div class="nav-links">
-                        <a class="nav-link" href="index.html">About</a>
-                        <a class="nav-link" href="projects.html">Projects</a>
+                </nav>
+            </header>
+            <section class="home intro has-centered-text">
+                <div>
+                    <h1>Enthusiastic Software Developer.</h1>
+                    <h2>I design & develop software, and I love what I do.</h2>
+                </div>
+                <div>
+                    <img class="headshot" src="images/profile.png" alt="Profile Photo"/>
+                </div>
+                <div class="computer-container">
+                    <img class="computers" src="images/computers.png" alt="Computers"/>
+                </div>
+            </section>
+            <section class="home about has-centered-text is-secondary is-long">
+                <div class="centered-container">
+                    <div class="section is-three-fifths">
+                        <h1>Hi, I'm Dakota. Nice to meet you.</h1>
+                        <h2>Since I began my journey as a developer, I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <section class="home intro has-centered-text">
-            <div>
-                <h1>Enthusiastic Software Developer.</h1>
-                <h2>I design & develop software, and I love what I do.</h2>
-            </div>
-            <div>
-                <img class="headshot" src="images/profile.png" alt="Profile Photo"/>
-            </div>
-            <div class="computer-container">
-                <img class="computers" src="images/computers.png" alt="Computers"/>
-            </div>
-        </section>
-        <section class="home about has-centered-text is-secondary is-long">
-            <div class="centered-container">
-                <div class="section is-three-fifths">
-                    <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                    <h2>Since I began my journey as a developer, I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
+            </section>
+            <section class="skillset centered-container">
+                <div class="skillset-container is-three-fifths has-centered-text">
+                    <div class="column column-left backend-development">
+                        <img class="skill-icon" src="images/backend.png" alt="Backend"/>
+                        <h1>Backend Developer</h1>
+                        <p>I value creating efficient & useful data structures using innovative technologies.</p>
+                        <h2>Languages:</h2>
+                        <p>Java, C#, Python, C, SQL</p>
+                        <h2>Tools:</h2>
+                        <ul>
+                            <li>Visual Studio</li>
+                            <li>GitHub</li>
+                            <li>VS Code</li>
+                            <li>Terminal</li>
+                            <li>IntelliJ</li>
+                            <li>MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="column column-right frontend-development">
+                        <img class="skill-icon" src="images/frontend.png" alt="Frontend"/>
+                        <h1>Frontend Developer</h1>
+                        <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
+                        <h2>Languages:</h2>
+                        <p>HTML, CSS, JavaScript</p>
+                        <h2>Tools:</h2>
+                        <ul>
+                            <li>Bootstrap</li>
+                            <li>Node.js</li>
+                            <li>Angular</li>
+                            <li>ExpressJS</li>
+                            <li>MongoDB</li>
+                            <li>Blazor</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <section class="skillset centered-container">
-            <div class="skillset-container is-three-fifths has-centered-text">
-                <div class="column column-left backend-development">
-                    <img class="skill-icon" src="images/backend.png" alt="Backend"/>
-                    <h1>Backend Developer</h1>
-                    <p>I value creating efficient & useful data structures using innovative technologies.</p>
-                    <h2>Languages:</h2>
-                    <p>Java, C#, Python, C, SQL</p>
-                    <h2>Tools:</h2>
-                    <ul>
-                        <li>Visual Studio</li>
-                        <li>GitHub</li>
-                        <li>VS Code</li>
-                        <li>Terminal</li>
-                        <li>IntelliJ</li>
-                        <li>MySQL</li>
-                    </ul>
-                </div>
-                <div class="column column-right frontend-development">
-                    <img class="skill-icon" src="images/frontend.png" alt="Frontend"/>
-                    <h1>Frontend Developer</h1>
-                    <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
-                    <h2>Languages:</h2>
-                    <p>HTML, CSS, JavaScript</p>
-                    <h2>Tools:</h2>
-                    <ul>
-                        <li>Bootstrap</li>
-                        <li>Node.js</li>
-                        <li>Angular</li>
-                        <li>ExpressJS</li>
-                        <li>MongoDB</li>
-                        <li>Blazor</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div> 
         <footer>
             <div class="footer-container">
                 <div class="footer-copyright-container">
