--- a/projects.html
+++ b/projects.html
@@ -12,30 +12,32 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
     <body>
-        <header>
-            <nav class="navbar">
-                <div class="navbar-container">
-                    <div class="nav-heading">
-                        <a class="nav-link" href="index.html">
-                            <strong>Dakota Kallas</strong>
-                        </a>
+        <div class="content-wrap">
+            <header>
+                <nav class="navbar">
+                    <div class="navbar-container">
+                        <div class="nav-heading">
+                            <a href="index.html">
+                                <strong>Dakota Kallas</strong>
+                            </a>
+                        </div>
+                        <div class="nav-links">
+                            <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
+                            <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
+                        </div>
                     </div>
-                    <div class="nav-links">
-                        <a class="nav-link" href="index.html">About</a>
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </div>
+                </nav>
+            </header>
+            <section class="projects intro has-centered-text">
+                <div>
+                    <h1>Projects.</h1>
+                    <h2>Here are a few development projects I've worked on. Want to see more? <a href="mailto:kallas.dakota@gmail.com">Email me.</a></h2>
                 </div>
-            </nav>
-        </header>
-        <section class="projects intro has-centered-text">
-            <div>
-                <h1>Projects.</h1>
-                <h2>Here are a few development projects I've worked on. Want to see more? <a href="mailto:kallas.dakota@gmail.com">Email me.</a></h2>
-            </div>
-        </section>
-        <section class="project-container">
-            <div id="projects" class="project-card-container"></div>
-        </section>
+            </section>
+            <section class="project-container">
+                <div id="projects" class="project-card-container"></div>
+            </section>
+        </div>
         <footer>
             <div class="footer-container">
                 <div class="footer-copyright-container">
