Created responsive css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <meta name="description" content="Dakota Kallas's portfolio site">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/icon.ico">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/mobile.css">
+        <link rel="stylesheet" href="css/larger.css">
+        <link rel="stylesheet" href="css/desktop.css">
+        <link rel="stylesheet" href="css/maximum.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
     <body>
@@ -29,11 +32,11 @@
                 </nav>
             </header>
             <section class="home intro has-centered-text">
-                <div>
+                <div class="intro-headings">
                     <h1>Enthusiastic Software Developer.</h1>
                     <h2>I design & develop software, and I love what I do.</h2>
                 </div>
-                <div>
+                <div class="intro-headshot">
                     <img class="headshot" src="images/profile.png" alt="Profile Photo"/>
                 </div>
                 <div class="computer-container">
@@ -42,7 +45,7 @@
             </section>
             <section class="home about has-centered-text is-secondary is-long">
                 <div class="centered-container">
-                    <div class="section is-three-fifths">
+                    <div class="about-container">
                         <h1>Hi, I'm Dakota. Nice to meet you.</h1>
                         <h2>Since I began my journey as a developer, I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
                     </div>
