--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,10 @@
         <meta name="description" content="Projects that Dakota Kallas has worked on.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/icon.ico">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/mobile.css">
+        <link rel="stylesheet" href="css/larger.css">
+        <link rel="stylesheet" href="css/desktop.css">
+        <link rel="stylesheet" href="css/maximum.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     </head>
     <body>
