--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="centered-container">
                     <div class="about-container">
                         <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                        <h2>Since I began my journey as a developer, I have graduated with a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
+                        <h2>Since I began my journey as a developer, I have been working towards a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skillset.</h2>
                     </div>
                 </div>
             </section>
@@ -106,6 +106,5 @@
                 </div>
             </div>
         </footer>
-        <script src="" async defer></script>
     </body>
 </html>
