--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     <h2>I design & develop software, and I love what I do.</h2>
                 </div>
                 <div class="intro-headshot">
-                    <img class="headshot" src="images/profile.png" alt="Profile Photo"/>
+                    <img class="headshot" src="images/assets/profile.png" alt="Profile Photo"/>
                 </div>
                 <div class="computer-container">
-                    <img class="computers" src="images/computers.png" alt="Computers"/>
+                    <img class="computers" src="images/assets/computers.png" alt="Computers"/>
                 </div>
             </section>
             <section class="home about has-centered-text is-secondary is-long">
@@ -54,7 +54,7 @@
             <section class="skillset centered-container">
                 <div class="skillset-container is-three-fifths has-centered-text">
                     <div class="column column-left backend-development">
-                        <img class="skill-icon" src="images/backend.png" alt="Backend"/>
+                        <img class="skill-icon" src="images/assets/backend.png" alt="Backend"/>
                         <h1>Backend Developer</h1>
                         <p>I value creating efficient & useful data structures using innovative technologies.</p>
                         <h2>Languages:</h2>
@@ -70,7 +70,7 @@
                         </ul>
                     </div>
                     <div class="column column-right frontend-development">
-                        <img class="skill-icon" src="images/frontend.png" alt="Frontend"/>
+                        <img class="skill-icon" src="images/assets/frontend.png" alt="Frontend"/>
                         <h1>Frontend Developer</h1>
                         <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
                         <h2>Languages:</h2>
