--- a/index.html
+++ b/index.html
@@ -1,110 +1,117 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dakota Kallas</title>
-        <meta name="description" content="Dakota Kallas's portfolio site">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="images/icon.ico">
-        <link rel="stylesheet" href="css/mobile.css">
-        <link rel="stylesheet" href="css/larger.css">
-        <link rel="stylesheet" href="css/desktop.css">
-        <link rel="stylesheet" href="css/maximum.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-    </head>
-    <body>
-        <div class="content-wrap">
-            <header>
-                <nav class="navbar">
-                    <div class="navbar-container">
-                        <div class="nav-heading">
-                            <a href="index.html">
-                                <strong>Dakota Kallas</strong>
-                            </a>
-                        </div>
-                        <div class="nav-links">
-                            <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
-                            <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
-                        </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dakota Kallas</title>
+    <meta name="description" content="Dakota Kallas's portfolio site">
+    <meta name="keywords" content="Dakota Kallas, Kallas, Portfolio, Projects" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/icon.ico">
+    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/larger.css">
+    <link rel="stylesheet" href="css/desktop.css">
+    <link rel="stylesheet" href="css/maximum.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+</head>
+
+<body>
+    <div class="content-wrap">
+        <header>
+            <nav class="navbar">
+                <div class="navbar-container">
+                    <div class="nav-heading">
+                        <a href="index.html">
+                            <strong>Dakota Kallas</strong>
+                        </a>
                     </div>
-                </nav>
-            </header>
-            <section class="home intro has-centered-text">
-                <div class="intro-headings">
-                    <h1>Enthusiastic Software Developer.</h1>
-                    <h2>I design & develop software, and I love what I do.</h2>
-                </div>
-                <div class="intro-headshot">
-                    <img class="headshot" src="images/assets/profile.png" alt="Profile Photo"/>
-                </div>
-                <div class="computer-container">
-                    <img class="computers" src="images/assets/computers.png" alt="Computers"/>
-                </div>
-            </section>
-            <section class="home about has-centered-text is-secondary is-long">
-                <div class="centered-container">
-                    <div class="about-container">
-                        <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                        <h2>Since I began my journey as a developer, I have been working towards a Bachelor's Degree in Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious and consistently improving & expanding my skill set.</h2>
+                    <div class="nav-links">
+                        <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
+                        <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
                     </div>
                 </div>
-            </section>
-            <section class="skillset centered-container">
-                <div class="skillset-container is-three-fifths has-centered-text">
-                    <div class="column column-left backend-development">
-                        <img class="skill-icon" src="images/assets/backend.png" alt="Backend"/>
-                        <h1>Backend Developer</h1>
-                        <p>I value creating efficient & useful data structures using innovative technologies.</p>
-                        <h2>Languages:</h2>
-                        <p>Java, C#, Python, C, SQL</p>
-                        <h2>Tools:</h2>
-                        <ul>
-                            <li>Visual Studio</li>
-                            <li>GitHub</li>
-                            <li>VS Code</li>
-                            <li>Terminal</li>
-                            <li>IntelliJ</li>
-                            <li>MySQL</li>
-                        </ul>
-                    </div>
-                    <div class="column column-right frontend-development">
-                        <img class="skill-icon" src="images/assets/frontend.png" alt="Frontend"/>
-                        <h1>Frontend Developer</h1>
-                        <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
-                        <h2>Languages:</h2>
-                        <p>HTML, CSS, JavaScript</p>
-                        <h2>Tools:</h2>
-                        <ul>
-                            <li>Bootstrap</li>
-                            <li>Node.js</li>
-                            <li>Angular</li>
-                            <li>ExpressJS</li>
-                            <li>MongoDB</li>
-                            <li>Blazor</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-        </div> 
-        <footer>
-            <div class="footer-container">
-                <div class="footer-copyright-container">
-                    <p>Copyright © Dakota Kallas 2022</p>
-                </div>
-                <div class="footer-icon-container">
-                    <a href="mailto:kallas.dakota@gmail.com">
-                        <div id="email-icon" class="footer-icon"></div>
-                    </a>
-                    <a href="https://www.linkedin.com/in/dakota-kallas/">
-                        <div id="linkedin-icon" class="footer-icon"></div>
-                    </a>    
-                    <a href="https://github.com/dakota-kallas">
-                        <div id="github-icon" class="footer-icon"></div>
-                    </a>                
+            </nav>
+        </header>
+        <section class="home intro has-centered-text">
+            <div class="intro-headings">
+                <h1>Enthusiastic Software Developer.</h1>
+                <h2>I design & develop software, and I love what I do.</h2>
+            </div>
+            <div class="intro-headshot">
+                <img class="headshot" src="images/assets/profile.png" alt="Profile Photo" />
+            </div>
+            <div class="computer-container">
+                <img class="computers" src="images/assets/computers.png" alt="Computers" />
+            </div>
+        </section>
+        <section class="home about has-centered-text is-secondary is-long">
+            <div class="centered-container">
+                <div class="about-container">
+                    <h1>Hi, I'm Dakota. Nice to meet you.</h1>
+                    <h2>Since I began my journey as a developer, I have been working towards a Bachelor's Degree in
+                        Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh
+                        Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious
+                        and consistently improving & expanding my skill set.</h2>
                 </div>
             </div>
-        </footer>
-    </body>
+        </section>
+        <section class="skillset centered-container">
+            <div class="skillset-container is-three-fifths has-centered-text">
+                <div class="column column-left backend-development">
+                    <img class="skill-icon" src="images/assets/backend.png" alt="Backend" />
+                    <h1>Backend Developer</h1>
+                    <p>I value creating efficient & useful data structures using innovative technologies.</p>
+                    <h2>Languages:</h2>
+                    <p>Java, C#, Python, C, SQL</p>
+                    <h2>Tools:</h2>
+                    <ul>
+                        <li>Visual Studio</li>
+                        <li>GitHub</li>
+                        <li>VS Code</li>
+                        <li>Terminal</li>
+                        <li>IntelliJ</li>
+                        <li>MySQL</li>
+                    </ul>
+                </div>
+                <div class="column column-right frontend-development">
+                    <img class="skill-icon" src="images/assets/frontend.png" alt="Frontend" />
+                    <h1>Frontend Developer</h1>
+                    <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
+                    <h2>Languages:</h2>
+                    <p>HTML, CSS, JavaScript</p>
+                    <h2>Tools:</h2>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>Node.js</li>
+                        <li>Angular</li>
+                        <li>ExpressJS</li>
+                        <li>MongoDB</li>
+                        <li>Blazor</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-copyright-container">
+                <p>Copyright © Dakota Kallas 2022</p>
+            </div>
+            <div class="footer-icon-container">
+                <a href="mailto:kallas.dakota@gmail.com">
+                    <div id="email-icon" class="footer-icon"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/dakota-kallas/">
+                    <div id="linkedin-icon" class="footer-icon"></div>
+                </a>
+                <a href="https://github.com/dakota-kallas">
+                    <div id="github-icon" class="footer-icon"></div>
+                </a>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
