--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/larger.css">
     <link rel="stylesheet" href="css/desktop.css">
     <link rel="stylesheet" href="css/maximum.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
 </head>
 
 <body>
@@ -100,13 +100,13 @@
                 <p>Copyright © Dakota Kallas 2022</p>
             </div>
             <div class="footer-icon-container">
-                <a href="mailto:kallas.dakota@gmail.com">
+                <a aria-label="Send me an email" href="mailto:kallas.dakota@gmail.com">
                     <div id="email-icon" class="footer-icon"></div>
                 </a>
-                <a href="https://www.linkedin.com/in/dakota-kallas/">
+                <a aria-label="Visit my LinkedIn" href="https://www.linkedin.com/in/dakota-kallas/">
                     <div id="linkedin-icon" class="footer-icon"></div>
                 </a>
-                <a href="https://github.com/dakota-kallas">
+                <a aria-label="Visit my GitHub" href="https://github.com/dakota-kallas">
                     <div id="github-icon" class="footer-icon"></div>
                 </a>
             </div>
