--- a/projects.html
+++ b/projects.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dakota's Projects</title>
-        <meta name="description" content="Projects that Dakota Kallas has worked on.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="images/icon.ico">
-        <link rel="stylesheet" href="css/mobile.css">
-        <link rel="stylesheet" href="css/larger.css">
-        <link rel="stylesheet" href="css/desktop.css">
-        <link rel="stylesheet" href="css/maximum.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-    </head>
-    <body>
-        <div class="content-wrap">
-            <header>
-                <nav class="navbar">
-                    <div class="navbar-container">
-                        <div class="nav-heading">
-                            <a href="index.html">
-                                <strong>Dakota Kallas</strong>
-                            </a>
-                        </div>
-                        <div class="nav-links">
-                            <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
-                            <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
-                        </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dakota's Projects</title>
+    <meta name="description" content="Projects that Dakota Kallas has worked on.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/icon.ico">
+    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/larger.css">
+    <link rel="stylesheet" href="css/desktop.css">
+    <link rel="stylesheet" href="css/maximum.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
+</head>
+
+<body>
+    <div class="content-wrap">
+        <header>
+            <nav class="navbar">
+                <div class="navbar-container">
+                    <div class="nav-heading">
+                        <a href="index.html">
+                            <strong>Dakota Kallas</strong>
+                        </a>
                     </div>
-                </nav>
-            </header>
-            <section class="projects intro has-centered-text">
-                <div>
-                    <h1>Projects.</h1>
-                    <h2>Here are a few development projects I've worked on. Want to see more? <a href="mailto:kallas.dakota@gmail.com">Email me.</a></h2>
+                    <div class="nav-links">
+                        <span class="nav-link-container"><a class="nav-link" href="index.html">About</a></span>
+                        <span class="nav-link-container"><a class="nav-link" href="projects.html">Projects</a></span>
+                    </div>
                 </div>
-            </section>
-            <section class="project-container">
-                <div id="projects" class="project-card-container"></div>
-            </section>
-        </div>
-        <footer>
-            <div class="footer-container">
-                <div class="footer-copyright-container">
-                    <p>Copyright © Dakota Kallas 2022</p>
-                </div>
-                <div class="footer-icon-container">
-                    <a href="mailto:kallas.dakota@gmail.com">
-                        <div id="email-icon" class="footer-icon"></div>
-                    </a>
-                    <a href="https://www.linkedin.com/in/dakota-kallas/">
-                        <div id="linkedin-icon" class="footer-icon"></div>
-                    </a>    
-                    <a href="https://github.com/dakota-kallas">
-                        <div id="github-icon" class="footer-icon"></div>
-                    </a>                
-                </div>
+            </nav>
+        </header>
+        <section class="projects intro has-centered-text">
+            <div>
+                <h1>Projects.</h1>
+                <h2>Here are a few development projects I've worked on. Want to see more? <a
+                        href="mailto:kallas.dakota@gmail.com">Email me.</a></h2>
             </div>
-        </footer>
-        <script src="js/project.js" async defer></script>
-    </body>
+        </section>
+        <section class="project-container">
+            <div id="projects" class="project-card-container"></div>
+        </section>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-copyright-container">
+                <p>Copyright © Dakota Kallas 2022</p>
+            </div>
+            <div class="footer-icon-container">
+                <a href="mailto:kallas.dakota@gmail.com">
+                    <div id="email-icon" class="footer-icon"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/dakota-kallas/">
+                    <div id="linkedin-icon" class="footer-icon"></div>
+                </a>
+                <a href="https://github.com/dakota-kallas">
+                    <div id="github-icon" class="footer-icon"></div>
+                </a>
+            </div>
+        </div>
+    </footer>
+    <script src="js/project.js" defer></script>
+</body>
+
 </html>
