Updated Description & Tools

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="centered-container">
                 <div class="about-container">
                     <h1>Hi, I'm Dakota. Nice to meet you.</h1>
-                    <h2>Since I began my journey as a developer, I have been working towards a Bachelor's Degree in
-                        Computer Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh
-                        Corporation & Skyward, I have been able to grow as a software engineer. I'm naturally curious
-                        and consistently improving & expanding my skill set.</h2>
+                    <h2>Since I began my journey as a developer, I have been naturally curious and consistently
+                        improving & expanding my skill set. Recently, I graduated with a Bachelor's Degree in Computer
+                        Science from the University of Wisconsin-La Crosse. Working for companies like Oshkosh
+                        Corporation & Skyward, I have been able to grow as a software engineer.</h2>
                 </div>
             </div>
         </section>
@@ -71,7 +71,7 @@
                         <li>GitHub</li>
                         <li>VS Code</li>
                         <li>Terminal</li>
-                        <li>IntelliJ</li>
+                        <li>Amazon Web Services</li>
                         <li>MySQL</li>
                     </ul>
                 </div>
