--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1>Frontend Developer</h1>
                     <p>I like designing elegant & simple sites in the browser for users to interact with.</p>
                     <h2>Languages:</h2>
-                    <p>HTML, CSS, JavaScript</p>
+                    <p>HTML, CSS, JavaScript, TypeScript</p>
                     <h2>Tools:</h2>
                     <ul>
                         <li>Bootstrap</li>
